# learn-llm-inference

./: Justfile  README.md  config.yaml  pyproject.toml
deploy/: serve.py
src/modal_llm/runtime/models/: model.py  tokenizer.py
src/modal_llm/runtime/services/: engine.py  model.py  tokenizer.py
src/modal_llm/web/: __init__.py  fastapi.py  models.py
src/scratch_llm/: __init__.py  config.py
src/scratch_llm/runtime/models/: engine.py
src/scratch_llm/runtime/services/: engine.py  model.py  tokenizer.py
src/scratch_llm/web/: fastapi.py  models.py
test/: test_web.py
